【Windows】增加windows的API代码示例和接入SDK文档

--- a/product/视频服务/实时音视频/无UI集成方案/08. 自定义视频采集和渲染/自定义采集和渲染.md
+++ b/product/视频服务/实时音视频/无UI集成方案/08. 自定义视频采集和渲染/自定义采集和渲染.md
@@ -86,23 +86,23 @@ public void onFrameAvailable(EGLContext eglContext, int textureId, int width, in
   <td>TRTCVideoBufferType_Buffer</td>
   <td>仅支持 TRTCVideoBufferType_Buffer。</td>
 </tr><tr>
-  <td>textureId</td>
-  <td>int</td>
-  <td>不需要填写</td>
-  <td>Windows平台不支持纹理</td>
-</tr><tr>
   <td>data</td>
   <td>char *</td>
   <td>视频帧 buffer</td>
   <td>一帧I420数据。</td>
 </tr><tr>
-  <td>timestamp</td>
-  <td>uint64_t</td>
-  <td>0</td>
-  <td>可以填0，这样 SDK 会自定填充 timestamp 字段，但请<strong>均匀</strong>地控制 sendCustomVideoData 的调用间隔。</td>
+  <td>textureId</td>
+  <td>int</td>
+  <td>不需要填写</td>
+  <td>Windows平台不支持纹理</td>
+</tr><tr>
+  <td>length</td>
+  <td>uint32_t</td>
+  <td>视频数据的长度</td>
+  <td>视频数据的长度，单位是字节。对于 i420 而言：length = width * height * 3 / 2；对于 BGRA32 而言：length = width * height * 4。</td>
 </tr><tr>
   <td>width</td>
-  <td>uint64_t</td>
+  <td>uint32_t</td>
   <td>视频画面的宽度</td>
   <td>请严格填写传入画面的像素宽度。</td>
 </tr><tr>
@@ -111,24 +111,31 @@ public void onFrameAvailable(EGLContext eglContext, int textureId, int width, in
   <td>视频画面的高度</td>
   <td>请严格填写传入画面的像素高度。</td>
 </tr><tr>
+  <td>timestamp</td>
+  <td>uint64_t</td>
+  <td>0</td>
+  <td>可以填0，这样 SDK 会自定填充 timestamp 字段，但请<strong>均匀</strong>地控制 sendCustomVideoData 的调用间隔。</td>
+</tr><tr>
   <td>rotation</td>
   <td>TRTCVideoRotation</td>
   <td>画面旋转角度</td>
-  <td><li>默认不填写。 </li><li>如果需要对画面进行旋转，可以填写<code>TRTCVideoRotation_0</code>、<code>TRTCVideoRotation_90</code>、<code>TRTCVideoRotation_180</code>、<code>TRTCVideoRotation_270</code>。SDK  会根据这个值将视频顺时针旋转对应角度。例如一个竖屏画面，传入<code>TRTCVideoRotation_90</code>后，SDK 会旋转成横屏显示。</li></td>
+  <td><li>默认不填写。 </li><li>如果需要对画面进行旋转，可以填写<code>TRTCVideoRotation0</code>、<code>TRTCVideoRotation90</code>、<code>TRTCVideoRotation180</code>、<code>TRTCVideoRotation270</code>。SDK  会根据这个值将视频顺时针旋转对应角度。例如一个竖屏画面，传入<code>TRTCVideoRotation90</code>后，SDK 会顺时针旋转90度显示。</li></td>
 </tr></tbody></table>
 
 #### 示例代码
-在 [Demo](https://github.com/tencentyun/TRTCSDK/blob/master/Windows/DuilibDemo/sdkinterface/TRTCCloudCore.cpp) 文件中有一个叫做 `sendCustomVideoFrame` 的函数，它展示了如何从一个本地视频文件中读取出 I420 格式的 buffer，并通过 SDK 进行后续处理。
+在 [Demo](https://github.com/LiteAVSDK/TRTC_Windows/blob/main/TRTC-API-Example-C++/TRTC-API-Example-Qt/src/TestCustomCapture/test_custom_capture.cpp) 文件中有一个叫做 `startCustomVideoData` 的函数，它展示了如何从一个本地视频文件中读取出 I420 格式的 buffer，并通过 SDK 进行后续处理。
 
 ```C++
 //组装一个 TRTCVideoFrame 并将其送给 trtcCloud 对象
-TRTCVideoFrame frame;
-frame.videoFormat = LiteAVVideoPixelFormat_I420;
-frame.length = bufferSize;
-frame.data = _video_buffer;
-frame.width = _video_width;
-frame.height = _video_height;
-m_pCloud->sendCustomVideoData(TRTCVideoStreamTypeBig, & frame);      
+liteav::TRTCVideoFrame frame;
+frame.timestamp = getTRTCShareInstance()->generateCustomPTS();
+frame.videoFormat = liteav::TRTCVideoPixelFormat_I420;
+frame.bufferType = liteav::TRTCVideoBufferType_Buffer;
+frame.length = buffer_size;
+frame.data = array.data();
+frame.width = YUV_WIDTH;
+frame.height = YUV_HEIGHT;
+getTRTCShareInstance()->sendCustomVideoData(&frame);    
 ```
 :::
 </dx-tabs>
@@ -202,41 +209,31 @@ TRTC SDK 使用 OpenGL 进行视频画面的渲染，如果您是用在游戏开
 
 |  参数名称   |         参数类型          |          推荐取值           |                           备注说明                           |
 | :---------: | :-----------------------: | :-------------------------: | :----------------------------------------------------------: |
-| pixelFormat |   TRTCVideoPixelFormat    | TRTCVideoPixelFormat_BGRA32 | 支持回调 TRTCVideoPixelFormat_I420 或 TRTCVideoPixelFormat_BGRA32 像素格式的视频帧。 |
+| pixelFormat |   TRTCVideoPixelFormat    | TRTCVideoPixelFormat_I420 | 支持回调 TRTCVideoPixelFormat_I420 或 TRTCVideoPixelFormat_BGRA32 像素格式的视频帧。 |
 | bufferType  |    TRTCVideoBufferType    | TRTCVideoBufferType_Buffer  |           目前只支持 TRTCVideoBufferType_Buffer。            |
 |  callback   | ITRTCVideoRenderCallback* |  ITRTCVideoRenderCallback*  |                       自定义渲染回调。                       |
 
 [](id:example_windows)
 #### 示例代码
-如果 pixelFormat 选择了  TRTCVideoPixelFormat_BGRA32，bufferType 选择了 TRTCVideoBufferType_Buffer，那么整个您可以很方便地将一帧 BGRA32 格式的 PixelBuffer 转成一幅视频画面。在 Demo 中有一个叫做 `TXLiveAvVideoView.cpp` 的文件，其中就用如下的示例代码展示了如何使用该方法。
+在 [Demo](https://github.com/LiteAVSDK/TRTC_Windows/blob/main/TRTC-API-Example-C++/TRTC-API-Example-Qt/src/TestCustomRender/test_custom_render.cpp) 文件中有一个叫做 `onRenderVideoFrame` 的函数，是自定义视频渲染的回调函数，里面展示如何将视频数据进行绘制显示
 
 <dx-codeblock>
 ::: Window c++
-void TXLiveAvVideoView::renderFitMode(HDC hDC, unsigned char * buffer, int width, int height, RECT& rcImage)
-{
-    Point origin;
-    origin.X = m_rcItem.left, origin.Y = m_rcItem.top;
-    int viewWith = m_rcItem.right - m_rcItem.left;
-    int viewHeight = m_rcItem.bottom - m_rcItem.top;
+void TestCustomRender::onRenderVideoFrame(
+    const char* userId,
+    liteav::TRTCVideoStreamType streamType,
+    liteav::TRTCVideoFrame* frame) {
+  if (gl_yuv_widget_ == nullptr) {
+    return;
+  }
 
-    bool bReDrawBg = false;
-    
-    if (m_bmi.bmiHeader.biWidth != width || m_bmi.bmiHeader.biHeight != height)
-    {
-        memset(&m_bmi, 0, sizeof(m_bmi));
-        m_bmi.bmiHeader.biSize = sizeof(BITMAPINFOHEADER);
-        m_bmi.bmiHeader.biWidth = width;
-        m_bmi.bmiHeader.biHeight = height;
-        m_bmi.bmiHeader.biPlanes = 1;
-        m_bmi.bmiHeader.biBitCount = 32;
-        m_bmi.bmiHeader.biCompression = BI_RGB;
-        bReDrawBg = true;
-    }
-    //开始处理渲染
-    ::SetStretchBltMode(hDC, COLORONCOLOR);
-    if (bReDrawBg)
-        ::PatBlt(hDC, 0 + origin.X, 0 + origin.Y, viewWith, viewHeight, BLACKNESS);
-    ::StretchDIBits(hDC, x + origin.X, y + origin.Y, width, height, 0, 0, width, height, m_argbRenderFrame.frameBuf, &m_bmi, DIB_RGB_COLORS, SRCCOPY);
+  if (streamType == liteav::TRTCVideoStreamType::TRTCVideoStreamTypeBig) {
+    // 调整渲染窗口
+    emit renderViewSize(frame->width, frame->height);
+    // 绘制视频帧
+    gl_yuv_widget_->slotShowYuv(reinterpret_cast<uchar*>(frame->data),
+                                frame->width, frame->height);
+  }
 }
 :::
 </dx-codeblock>
