【Android&iOS&Mac】发布音视频流文档更新

--- a/product/视频服务/实时音视频/无UI集成方案/04. 发布音视频流/发布音视频流.md
+++ b/product/视频服务/实时音视频/无UI集成方案/04. 发布音视频流/发布音视频流.md
@@ -40,7 +40,7 @@ self.trtcCloud = [TRTCCloud sharedInstance];
 // 设置本地画面的预览模式：开启左右镜像，设置画面为填充模式
 TRTCRenderParams *param = [[TRTCRenderParams alloc] init];
 param.fillMode   = TRTCVideoFillMode_Fill;
-param.mirrorType = TRTCVideoMirrorTypeDisable;
+param.mirrorType = TRTCVideoMirrorTypeAuto;
 [self.trtcCloud setLocalRenderParams:param];
 
 // 启动本地摄像头的预览（localCameraVideoView 是用于渲染本地渲染画面的控件）
@@ -58,7 +58,7 @@ self.trtcCloud = [TRTCCloud sharedInstance];
 // 设置本地画面的预览模式：开启左右镜像，设置画面为填充模式
 TRTCRenderParams *param = [[TRTCRenderParams alloc] init];
 param.fillMode   = TRTCVideoFillMode_Fill;
-param.mirrorType = TRTCVideoMirrorTypeDisable;
+param.mirrorType = TRTCVideoMirrorTypeAuto;
 [self.trtcCloud setLocalRenderParams:param];
 
 // 启动本地摄像头的预览（localCameraVideoView 是用于渲染本地渲染画面的控件）
@@ -200,7 +200,9 @@ mCloud.startLocalPreview(true, cameraVide);
 // If switching operation failed, the error code of the 'onSwitchRole' is not zero
 @Override
 public void onSwitchRoom(final int errCode, final String errMsg) {
-    Log.d(TAG, "Switching operation failed...");
+    if (errCode != 0) {
+        Log.d(TAG, "Switching operation failed...");
+    }   
 }
 :::
 ::: iOS ObjC
@@ -214,7 +216,9 @@ self.trtcCloud = [TRTCCloud sharedInstance];
 // 如果切换角色失败，onSwitchRole 回调的错误码便不是 0
 // If switching operation failed, the error code of the 'onSwitchRole' is not zero
 - (void)onSwitchRoom:(TXLiteAVError)errCode errMsg:(nullable NSString *)errMsg {
-    NSLog(@"Switching operation failed... ");
+    if (errCode != 0) {
+        NSLog(@"Switching operation failed... ");
+    }   
 }
 :::
 ::: Mac ObjC
@@ -228,7 +232,9 @@ self.trtcCloud = [TRTCCloud sharedInstance];
 // 如果切换角色失败，onSwitchRole 回调的错误码便不是 0
 // If switching operation failed, the error code of the 'onSwitchRole' is not zero
 - (void)onSwitchRoom:(TXLiteAVError)errCode errMsg:(nullable NSString *)errMsg {
-    NSLog(@"Switching operation failed... ");
+    if (errCode != 0) {
+        NSLog(@"Switching operation failed... ");
+    }   
 }
 :::
 ::: Windows C++
