【iOS&Mac】更新屏幕分享、自定义视频采集渲染文档.

--- a/product/视频服务/实时音视频/无UI集成方案/08. 自定义视频采集和渲染/自定义采集和渲染.md
+++ b/product/视频服务/实时音视频/无UI集成方案/08. 自定义视频采集和渲染/自定义采集和渲染.md
@@ -8,33 +8,21 @@
 在 `sendCustomVideoData` 接口中有一个叫 `TRTCVideoFrame` 的参数，它表示一帧视频画面。为了避免不必要的性能损失，对于输入 TRTC SDK 的视频数据，在不同平台上有不同的格式要求，具体要求如下：
 
 <dx-tabs>
-::: iOS\s平台
-TRTC SDK 支持 NV12 和 i420 两种 iOS 版本的 YUV 数据格式。在 iOS 平台上，比较高性能的图像传递方式是 CVPixelBufferRef，因此我们建议参数格式如下：
-
-|  参数名称   |       参数类型       |                      推荐取值                       |                           备注说明                           |
-| :---------: | :------------------: | :-------------------------------------------------: | :----------------------------------------------------------: |
-| pixelFormat | TRTCVideoPixelFormat |              TRTCVideoPixelFormat_NV12              |       iOS 平台上摄像头原生采集出的视频格式即是 NV12。        |
-| bufferType  | TRTCVideoBufferType  |                     PixelBuffer                     |            iOS 中原生支持的视频帧格式，性能最佳。            |
-| pixelBuffer |   CVPixelBufferRef   | 如果 TRTCVideoBufferType 是 PixelBuffer，则需填写。 |     iPhone 摄像头采集的数据是 NV12 格式的 PixelBuffer。      |
-|    data     |       NSData\*       |   如果 TRTCVideoBufferType 是 NSData，则需填写。    |                    性能不如 PixelBuffer。                    |
-|  timestamp  |       uint64_t       |                          0                          | 可以填0，这样 SDK 会自定填充 timestamp 字段，但请**均匀**地控制 sendCustomVideoData 的调用间隔。 |
-|    width    |       uint64_t       |                   视频画面的宽度                    |                请严格填写传入画面的像素宽度。                |
-|   height    |       uint32_t       |                   视频画面的高度                    |                请严格填写传入画面的像素高度。                |
-|  rotation   |  TRTCVideoRotation   |                       不填写                        | <ul style="margin:0"><li/>默认不填写。 <li/>如果需要对画面进行旋转，可以填写`TRTCVideoRotation_0`、`TRTCVideoRotation_90`、`TRTCVideoRotation_180`、`TRTCVideoRotation_270`。SDK  会根据这个值将视频顺时针旋转对应角度。例如一个竖屏画面，传入`TRTCVideoRotation_90`后，SDK 会旋转成横屏显示。</ul> |
+::: iOS&Mac\s平台
+在 iOS/Mac 平台上，摄像头原生采集的视频格式即是 NV12，原生支持且性能最佳的视频帧格式是CVPixelBufferRef，同时支持I420、OpenGL 2D纹理格式。
 
 #### 示例代码
-在 [Demo](https://github.com/LiteAVSDK/TRTC_iOS/tree/main/TRTC-API-Example-OC/Advanced/LocalVideoShare) 文件夹中有一个叫做 `LocalVideoShareViewController.m` 的文件，它展示了如何从一个本地视频文件中读取出 NV12 格式的 PixelBuffer，并通过 SDK 进行后续处理。
+在 [Demo](https://github.com/LiteAVSDK/TRTC_iOS/tree/main/TRTC-API-Example-OC/Advanced/LocalVideoShare) 中的 [LocalVideoShareViewController.m](https://github.com/LiteAVSDK/TRTC_iOS/blob/main/TRTC-API-Example-OC/Advanced/LocalVideoShare/LocalVideoShareViewController.m) 文件，它展示了如何从一个本地视频文件中读取出 NV12 格式的 PixelBuffer，并通过 SDK 进行后续处理。
 
-```objectiveC
+```ObjC
 //组装一个 TRTCVideoFrame 并将其送给 trtcCloud 对象
-TRTCVideoFrame* videoFrame = [TRTCVideoFrame new];
-videoFrame.bufferType = TRTCVideoBufferType_PixelBuffer;
+TRTCVideoFrame *videoFrame = [TRTCVideoFrame new];
 videoFrame.pixelFormat = TRTCVideoPixelFormat_NV12;
+videoFrame.bufferType = TRTCVideoBufferType_PixelBuffer;
 videoFrame.pixelBuffer = imageBuffer;
-videoFrame.rotation = rotation;
 videoFrame.timestamp = timeStamp;
         
-[trtcCloud sendCustomVideoData:videoFrame];      
+[[TRTCCloud sharedInstance] sendCustomVideoData:TRTCVideoStreamTypeBig frame:videoFrame];      
 ```
 :::
 ::: Android\s平台
@@ -149,28 +137,23 @@ getTRTCShareInstance()->sendCustomVideoData(&frame);
 TRTC SDK 使用 OpenGL 进行视频画面的渲染，如果您是用在游戏开发中，或者需要在自己的界面引擎中嵌入 TRTC SDK，那么就要自己渲染视频画面。
 
 <dx-tabs>
-::: iOS\s平台（包括\sMac）
-通过 TRTCCloud 的 `setLocalVideoRenderDelegate` 和 `setRemoteVideoRenderDelegate` 可以设置本地和远程画面的自定义渲染回调，相关参数如下：
-
-|  参数名称   |       参数类型       |            推荐取值             |                备注说明                |
-| :---------: | :------------------: | :-----------------------------: | :------------------------------------: |
-| pixelFormat | TRTCVideoPixelFormat |    TRTCVideoPixelFormat_NV12    |                   -                    |
-| bufferType  | TRTCVideoBufferType  | TRTCVideoBufferType_PixelBuffer | iOS 中原生支持的视频帧格式，性能最佳。 |
+::: iOS&Mac\s平台
+通过 TRTCCloud 的 `setLocalVideoRenderDelegate` 和 `setRemoteVideoRenderDelegate` 可以设置本地和远程画面的自定义渲染回调。
 
 [](id:example_ios)
 #### 示例代码
-如果 pixelFormat 选择了  TRTCVideoPixelFormat_NV12，bufferType 选择了 TRTCVideoBufferType_PixelBuffer，那么整个您可以很方便地将一帧 NV12 格式的 PixelBuffer 转成一副视频画面。在 Demo 文件夹中有一个叫做 `TestRenderVideoFrame.m` 的文件，其中就用如下的示例代码展示了如何使用该方法。
+在 [Demo](https://github.com/LiteAVSDK/TRTC_iOS/tree/aa3026c07baeda553aec491702382683d5486a32/TRTC-API-Example-Swift/CustomCapture/testCustomVideo) 中的 [TestRenderVideoFrame.m](https://github.com/LiteAVSDK/TRTC_iOS/blob/aa3026c07baeda553aec491702382683d5486a32/TRTC-API-Example-Swift/CustomCapture/testCustomVideo/TestRenderVideoFrame.m#L39) 文件展示了如何使用该方法。
 
-```objectiveC
+```ObjC
 - (void)onRenderVideoFrame:(TRTCVideoFrame *)frame 
-                                userId:(NSString *)userId 
-						        streamType:(TRTCVideoStreamType)streamType
+                    userId:(NSString *)userId 
+                streamType:(TRTCVideoStreamType)streamType
 {
     //userId是nil时为本地画面，否则为远端画面
     CFRetain(frame.pixelBuffer);
     __weak __typeof(self) weakSelf = self;
     dispatch_async(dispatch_get_main_queue(), ^{
-        TestRenderVideoFrame* strongSelf = weakSelf;
+        TestRenderVideoFrame *strongSelf = weakSelf;
         UIImageView* videoView = nil;
         if (userId) {
             videoView = [strongSelf.userVideoViews objectForKey:userId];
@@ -258,7 +241,7 @@ void TestCustomRender::onRenderVideoFrame(
 声音模块是一个高复杂度的模块，SDK 需要严格控制声音设备的采集和播放逻辑。在某些场景下，当您需要获取远程用户的音频数据或者需要获取本地麦克风采集到的音频数据时，可以通过 TRTCCloud 对应的不同平台的接口，来给 SDK 集成三个回调函数。
 
 <dx-alert infotype="explain" title="TRTCCloud 对应的不同平台的接口分别为：">
-<ul style="margin:0"><li/><b>iOS：</b>setAudioFrameDelegate。
+<ul style="margin:0"><li/><b>iOS&Mac：</b>setAudioFrameDelegate。
 <li/><b>Android：</b>setAudioFrameListener。
 <li/><b>Windows：</b>setAudioFrameCallback。
 </ul>
